--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,6 +2,12 @@
 * {
     box-sizing: border-box;
 }
+.flex_parent{
+    display: flex;
+
+}
+
+.child { background: hotpink; border: 1px; color: white; }
 
 body {
     margin: 0;
