--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,12 +2,17 @@
 * {
     box-sizing: border-box;
 }
+
 .flex_parent{
     display: flex;
 
 }
 
-.child { background: hotpink; border: 1px; color: white; }
+.child { 
+    background: hotpink; 
+    border: 1px; 
+    color: white; 
+}
 
 body {
     margin: 0;
@@ -20,15 +25,20 @@ body {
 h2 {
     display: flex;
     justify-content: center;
-    font-size: 32px;
+    font-size: 40px;
 }
 
 .front {
     display: flex;
     justify-content: center;
-    font-size: 32px;
+    font-size: 28px;
     text-align: center;
     padding: 100px;
+}
+
+.pics {
+    display: grid;
+    grid-template-rows: repeat(3, 1fr);
 }
 
 footer {
