--- a/static/css/main.css
+++ b/static/css/main.css
@@ -36,10 +36,25 @@ h2 {
     padding: 100px;
 }
 
-.pics {
+.row {
     display: grid;
     grid-template-rows: repeat(3, 1fr);
 }
+
+.row img {
+    display: flex;
+    flex-direction: row;
+    padding: 0 4rem;
+    max-width: 25%;
+}
+ /* 
+ .column {
+
+}
+.column img {
+
+} 
+*/
 
 footer {
     position: absolute;
