--- a/static/css/main.css
+++ b/static/css/main.css
@@ -38,15 +38,18 @@ h2 {
 
 .row {
     display: grid;
-    grid-template-rows: repeat(3, 1fr);
+    grid-template-columns: 1fr 1fr 1fr;
+    gap: 30px;
+    padding: 30px;
 }
 
+
 .row img {
-    display: flex;
-    flex-direction: row;
-    padding: 0 4rem;
-    max-width: 25%;
+    width:100%;
+
 }
+
+
  /* 
  .column {
 
