--- a/static/css/main.css
+++ b/static/css/main.css
@@ -35,7 +35,7 @@ body {
 h2 {
     display: flex;
     justify-content: center;
-    font-size: 40px;
+    font-size: 46px;
 }
 
 .front {
@@ -49,18 +49,28 @@ h2 {
 .row {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 30px;
-    padding: 30px;
+    gap: 100px;
+    padding: 100px;
 }
 
 
 .row img {
     width:100%;
-
+    max-height: 700px;
 }
 
 
 footer {
-    position: absolute;
-    bottom: 0;
+    width :100%;
+    background-color: var(--nav);
+    padding: 4rem 4rem;
+}
+
+
+footer p {
+    padding: 0 9rem;
+    font-size: 1rem;
+    text-decoration: none;
+    color: black;
+    font-family: 'Montserrat', sans-serif;
 }
