begun using a api for pics on front page

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,14 @@ h2 {
     max-height: 700px;
 }
 
+/* .row:nth-of-type() {
+
+} */
+.titles {
+    display: flex;
+    grid-template-columns: 1fr 1fr 1fr;
+
+}
 
 footer {
     width :100%;
