removed old imgaes from page, and use api images from now on

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -52,12 +52,15 @@ h2 {
     gap: 100px;
     padding: 100px;
 }
-
-
 .row img {
     width:100%;
-    max-height: 700px;
+    max-height: 600px;
 }
+/* .row:hover {
+    width: 150%;
+    height: 150%;
+} */
+
 
 /* .row:nth-of-type() {
 
