--- a/static/css/main.css
+++ b/static/css/main.css
@@ -66,9 +66,15 @@ h2 {
 
 } */
 .titles {
-    display: flex;
+    display: grid;
     grid-template-columns: 1fr 1fr 1fr;
+    padding: 100px;
+    /*gap: 100px;*/
 
+}
+.titles a {
+    display: flex;
+    
 }
 
 footer {
