--- a/static/css/main.css
+++ b/static/css/main.css
@@ -65,10 +65,11 @@ h2 {
 
 } */
 .titles {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    padding: 100px;
-    /*gap: 100px;*/
+    display: flex;
+    justify-content: space-around;
+
+    gap: 100px;
+    padding-bottom: 50px;
 
 }
 .titles a {
