--- a/static/css/main.css
+++ b/static/css/main.css
@@ -2,7 +2,9 @@
 * {
     box-sizing: border-box;
 }
-
+.factbutton {
+    color: aquamarine;
+}
 :root {
     --background-main: #ebf8fe;
     --hover-color: blue;
