last push. making sure new files are added

--- a/static/css/adopt.css
+++ b/static/css/adopt.css
@@ -9,3 +9,9 @@
     padding: 7.5px;
     font-size: 1.5em;
 }
+
+.fact_display {
+    display: flex;
+    justify-content: center;
+    padding: 15px;
+}
