--- a/static/css/adopt.css
+++ b/static/css/adopt.css
@@ -15,3 +15,16 @@
     justify-content: center;
     padding: 15px;
 }
+
+.gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    
+}
+
+.gallery img {
+    /* border: 2.5px solid black; */
+    padding: 15px;
+    width:100%;
+    height: 575px;
+}
