--- a/static/css/adopt.css
+++ b/static/css/adopt.css
@@ -19,12 +19,15 @@
 .gallery {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
+    background-color: var(--background-main);
+    padding: 15px;
+    gap: 15px;
     
 }
 
 .gallery img {
-    /* border: 2.5px solid black; */
-    padding: 15px;
+    border: 2.5px solid black;
+    border-radius: 2.5px;
     width:100%;
     height: 575px;
 }
