--- a/static/css/adopt.css
+++ b/static/css/adopt.css
@@ -2,18 +2,23 @@
     display: flex;
     justify-content: center;
     padding: 30px;
+    background-color: var(--background-main);
+
 }
 
 .fact_button {
     color: black;
     padding: 7.5px;
     font-size: 1.5em;
+
 }
 
 .fact_display {
     display: flex;
     justify-content: center;
-    padding: 15px;
+    font-size: 24px;
+    padding: 30px;
+    background-color: var(--background-main);
 }
 
 .gallery {
