--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap');
 
-nav {
+/* nav {
     width :100%;
     background-color: var(--nav);
     padding: 4rem 4rem;
@@ -23,5 +23,27 @@ nav a {
     text-decoration: none;
     color: black;
     font-family: 'Montserrat', sans-serif;
+} */
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+}
+body {
+    font-family: 'Josefin Sans', sans-serif;
+}
+.nav {
+    font-size: 18px;
+    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf   100%);
+    border: 1px solid rgba(0, 0, 0, 0.2);
+    padding-bottom: 10px;
+}
+.main-nav {
+    list-style-type: none;
+}
+.nav-links,
+.logo {
+    text-decoration: none;
+    color: rgba(255, 255, 255, 0.7);
 }
 
