--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,63 +1,61 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap");
 * {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 .factbutton {
-    color: aquamarine;
+  color: aquamarine;
 }
 :root {
-    --background-main: #ebf8fe;
-    --hover-color: blue;
-    --text-main: black;
-    --nav: lightblue;
-
+  --background-main: #ebf8fe;
+  --hover-color: blue;
+  --text-main: black;
+  --nav: lightblue;
 }
-.flex_parent{
-    display: flex;
-
+.flex_parent {
+  display: flex;
 }
 
-.child { 
-    background: hotpink; 
-    border: 1px; 
-    color: white; 
-} 
+.child {
+  background: hotpink;
+  border: 1px;
+  color: white;
+}
 
 .home {
-    background-color: var(--background-main);
-    min-height: 85vh;
+  background-color: var(--background-main);
+  min-height: 85vh;
 }
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .heading {
-    padding-top: 50px;
+  padding-top: 50px;
 }
 
 h2 {
-    display: flex;
-    justify-content: center;
-    font-size: 46px;
+  display: flex;
+  justify-content: center;
+  font-size: 46px;
 }
 
 .front {
-    display: flex;
-    justify-content: center;
-    font-size: 28px;
-    text-align: center;
-    padding: 100px;
+  display: flex;
+  justify-content: center;
+  font-size: 28px;
+  text-align: center;
+  padding: 100px;
 }
 
 .row {
-    display: grid;
-    grid-template-columns: 1fr 1fr 1fr;
-    gap: 100px;
-    padding: 100px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  gap: 100px;
+  padding: 100px;
 }
 .row img {
-    width:100%;
-    max-height: 625px;
+  width: 100%;
+  max-height: 625px;
 }
 /* .row:hover {
     width: 150%;
@@ -68,28 +66,26 @@ h2 {
 
 } */
 .titles {
-    display: flex;
-    justify-content: space-around;
-    gap: 100px;
-    padding-bottom: 50px;
-
+  display: flex;
+  justify-content: space-around;
+  gap: 100px;
+  padding-bottom: 50px;
 }
 .titles a {
-    display: flex;
-    text-decoration: none;
+  display: flex;
+  text-decoration: none;
 }
 
 footer {
-    width :100%;
-    background-color: var(--nav);
-    padding: 4rem 4rem;
+  width: 100%;
+  background-color: var(--nav);
+  padding: 4rem 4rem;
 }
 
-
 footer p {
-    padding: 0 9rem;
-    font-size: 1rem;
-    text-decoration: none;
-    color: black;
-    font-family: 'Montserrat', sans-serif;
+  padding: 0 9rem;
+  font-size: 1rem;
+  text-decoration: none;
+  color: black;
+  font-family: "Montserrat", sans-serif;
 }
