--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,49 +1,36 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap");
 
-/* nav {
-    width :100%;
-    background-color: var(--nav);
-    padding: 4rem 4rem;
-}
-
-.navb {
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    flex-wrap: wrap;
-
-}
-nav a:hover {
-    color: var(--hover-color);
-}
-
-nav a {
-    padding: 30px;
-    font-size: 34px;
-    text-decoration: none;
-    color: black;
-    font-family: 'Montserrat', sans-serif;
-} */
 * {
-    box-sizing: border-box;
-    padding: 0;
-    margin: 0;
+  box-sizing: border-box;
+  padding: 0;
+  margin: 0;
 }
 body {
-    font-family: 'Josefin Sans', sans-serif;
+  font-family: "Josefin Sans", sans-serif;
 }
-.nav {
-    font-size: 18px;
-    background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf   100%);
-    border: 1px solid rgba(0, 0, 0, 0.2);
-    padding-bottom: 10px;
+.navb {
+  background-color: var(--background-main);
+  font-size: 18px;
+  background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
+  border: 1px solid rgba(0, 0, 0, 0.2);
+  padding-bottom: 10px;
 }
 .main-nav {
-    list-style-type: none;
+  list-style-type: none;
 }
 .nav-links,
 .logo {
-    text-decoration: none;
-    color: rgba(255, 255, 255, 0.7);
+  text-decoration: none;
+  color: rgba(255, 255, 255, 0.7);
 }
 
+.main-nav li {
+  text-align: center;
+  margin: 15px auto;
+}
+.logo {
+  display: inline-block;
+  font-size: 22px;
+  margin-top: 10px;
+  margin-left: 20px;
+}
