--- a/static/css/main.css
+++ b/static/css/main.css
@@ -57,14 +57,7 @@ h2 {
   width: 100%;
   max-height: 625px;
 }
-/* .row:hover {
-    width: 150%;
-    height: 150%;
-} */
 
-/* .row:nth-of-type() {
-
-} */
 .titles {
   display: flex;
   justify-content: space-around;
@@ -86,6 +79,6 @@ footer p {
   padding: 0 9rem;
   font-size: 1rem;
   text-decoration: none;
-  color: black;
+  color: var(--text-main);
   font-family: "Montserrat", sans-serif;
 }
