--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -7,26 +7,31 @@
 }
 body {
   font-family: "Josefin Sans", sans-serif;
+  background-color: var(--nav);
+  display: flex;
 }
-.navb {
-  background-color: var(--background-main);
-  font-size: 18px;
-  background-image: linear-gradient(260deg, #2376ae 0%, #c16ecf 100%);
-  border: 1px solid rgba(0, 0, 0, 0.2);
+.navbar {
+  font-size: 24px;
   padding-bottom: 10px;
 }
 .main-nav {
   list-style-type: none;
+  justify-content: center;
+  
 }
 .nav-links,
 .logo {
   text-decoration: none;
-  color: rgba(255, 255, 255, 0.7);
+  color: var(--text-main);
 }
 
 .main-nav li {
   text-align: center;
   margin: 15px auto;
+
+}
+.nav-links:hover {
+    color:blue;
 }
 .logo {
   display: inline-block;
