--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -1,5 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat&display=swap");
-
+/* CSS for Nav bar */
 * {
   box-sizing: border-box;
   padding: 0;
@@ -8,7 +8,6 @@
 body {
   font-family: "Josefin Sans", sans-serif;
   background-color: var(--nav);
-  display: flex;
 }
 .navbar {
   font-size: 24px;
@@ -16,8 +15,6 @@ body {
 }
 .main-nav {
   list-style-type: none;
-  justify-content: center;
-  
 }
 .nav-links,
 .logo {
@@ -28,10 +25,9 @@ body {
 .main-nav li {
   text-align: center;
   margin: 15px auto;
-
 }
 .nav-links:hover {
-    color:blue;
+  color: blue;
 }
 .logo {
   display: inline-block;
