--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,5 +1,5 @@
 /* Footer CSS */
-footer {
+/* footer {
     width: 100%;
     background-color: var(--nav);
     padding: 4rem 4rem;
@@ -11,5 +11,29 @@ footer {
     font-size: 1rem;
     color: var(--text-main);
     font-family: "Montserrat", sans-serif;
-  }
-  
+  } */
+
+  .foot {
+    display: flex;
+    padding: 4vh 5vw;
+    justify-content: space-between;
+  } 
+
+  .foot > li {
+  display: block;
+  margin-block-start: 1em;
+  margin-block-end: 1em;
+  margin-inline-start: 0px;
+  margin-inline-end: 0px;
+  padding-inline-start: 40px;
+}
+.foot-center {
+  flex: 1;
+  width: 100%;
+}
+ 
+.footList {
+  /* color: var(--mainText); */
+}
+
+ 
