--- a/static/css/footer.css
+++ b/static/css/footer.css
@@ -1,25 +1,10 @@
 /* Footer CSS */
-/* footer {
-    width: 100%;
-    background-color: var(--nav);
-    padding: 4rem 4rem;
-  }
-  
-  footer li {
-    text-decoration: none;
-    padding: 0 9rem;
-    font-size: 1rem;
-    color: var(--text-main);
-    font-family: "Montserrat", sans-serif;
-  } */
-
-  .foot {
-    display: flex;
-    padding: 4vh 5vw;
-    justify-content: space-between;
-  } 
-
-  .foot > li {
+.foot {
+  display: flex;
+  padding: 4vh 5vw;
+  justify-content: space-between;
+} 
+.foot li {
   display: block;
   margin-block-start: 1em;
   margin-block-end: 1em;
@@ -31,9 +16,6 @@
   flex: 1;
   width: 100%;
 }
- 
-.footList {
-  /* color: var(--mainText); */
-}
+
 
  
