--- a/static/css/main.css
+++ b/static/css/main.css
@@ -17,25 +17,21 @@
 body {
   margin: 0;
 }
-
 .heading {
   padding-top: 50px;
 }
-
 h2 {
   display: flex;
   justify-content: center;
   font-size: 46px;
 }
-
-.front {
+.desc {
   display: flex;
   justify-content: center;
   font-size: 28px;
   text-align: center;
   padding: 100px;
 }
-
 .row {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
@@ -46,7 +42,6 @@ h2 {
   width: 100%;
   max-height: 625px;
 }
-
 .titles {
   display: flex;
   justify-content: space-around;
@@ -57,3 +52,14 @@ h2 {
   display: flex;
   text-decoration: none;
 }
+@media (max-width:1000px) {
+  .h2 {
+    font-size: 40px;
+  }
+  .desc {
+    font-size: 20px;
+  }
+  .row {
+    grid-template-columns: 1fr;
+  }
+} 
