--- a/static/css/nav.css
+++ b/static/css/nav.css
@@ -13,17 +13,17 @@ body {
   padding-bottom: 10px;
 }
 .main-nav {
+  display: flex;
+  justify-content: space-around;
   list-style-type: none;
 }
-.nav-links,
-.logo {
+.nav-links, .logo {
   text-decoration: none;
   color: var(--text-main);
 }
-
 .main-nav li {
   text-align: center;
-  margin: 15px auto;
+  padding: 15px;
 }
 .nav-links:hover {
   color: blue;
@@ -39,5 +39,12 @@ body {
   .logo {
     display: flex;
     justify-content: center;
+  }
+  .main-nav {
+    display: flex;
+    flex-direction: column;
+  }
+  .main-nav li {
+    padding: 7.5px;
   }
 }
