--- a/static/css/adopt.css
+++ b/static/css/adopt.css
@@ -13,6 +13,7 @@
   border-radius: 10px;
   width: 100%;
   height: 575px;
+  transition:border 0.3s ;
 }
 /* hover effect of pics */
 .gallery img:hover {
